5th commit - Current working state with playlist issues