@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class SongService {
@@ -15,74 +16,101 @@ public class SongService {
     @Autowired
     private SongRepository songRepository;
     
-    // Get all songs
     public List<SongDTO> getAllSongs() {
         return songRepository.findAll().stream()
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
     
-    // Get song by ID
     public SongDTO getSongById(Long id) {
         Optional<Song> songOpt = songRepository.findById(id);
-        
         if (songOpt.isEmpty()) {
             throw new RuntimeException("Song not found with ID: " + id);
         }
-        
         return convertToDTO(songOpt.get());
     }
     
-    // Search songs by title
     public List<SongDTO> searchByTitle(String title) {
         return songRepository.findByTitleContainingIgnoreCase(title).stream()
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
     
-    // Search songs by artist
     public List<SongDTO> searchByArtist(String artist) {
         return songRepository.findByArtistContainingIgnoreCase(artist).stream()
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
     
-    // Get songs by genre
     public List<SongDTO> getSongsByGenre(String genre) {
-        return songRepository.findByGenre(genre).stream()
+        return songRepository.findByGenreContainingIgnoreCase(genre).stream()
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
     
-    // Get songs by album
     public List<SongDTO> getSongsByAlbum(String album) {
         return songRepository.findByAlbumContainingIgnoreCase(album).stream()
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
     
-    // Helper method to convert Song entity to SongDTO
-    private SongDTO convertToDTO(Song song) {
+    public List<SongDTO> getRecentSongs(int limit) {
+        return songRepository.findByOrderByUploadedAtDesc().stream()
+            .limit(limit)
+            .map(this::convertToDTO)
+            .collect(Collectors.toList());
+    }
+    
+    public SongDTO updateSongFilePath(Long songId, String audioFilePath) {
+        Optional<Song> songOpt = songRepository.findById(songId);
+        if (songOpt.isEmpty()) {
+            throw new RuntimeException("Song not found with ID: " + songId);
+        }
+        Song song = songOpt.get();
+        song.setAudioUrl(audioFilePath); // Fixed: Use audioUrl instead of audioFilePath
+        Song updatedSong = songRepository.save(song);
+        return convertToDTO(updatedSong);
+    }
+    
+    public List<SongDTO> getSongsWithAudio() {
+        return songRepository.findAll().stream()
+            .filter(song -> song.getAudioUrl() != null && !song.getAudioUrl().isEmpty())
+            .map(this::convertToDTO)
+            .collect(Collectors.toList());
+    }
+    
+    public SongDTO convertToDTO(Song song) {
         return new SongDTO(
             song.getId(),
             song.getTitle(),
             song.getArtist(),
             song.getAlbum(),
-            song.getReleaseYear(),
-            song.getDurationSeconds(),
-            song.getFilePath(),
             song.getGenre(),
-            song.getUploadedAt()
+            song.getDuration(),
+            song.getAudioUrl(),
+            song.getAlbumArtUrl(),
+            song.getReleaseYear(),
+            song.getUploadedAt(),
+            song.getUploaderId(),
+            song.getAverageRating(),
+            song.getRatingCount(),
+            song.getPlayCount(),
+            song.getIsOfflineAvailable()
         );
     }
     
-    // Get recently added songs (for homepage)
-    public List<SongDTO> getRecentSongs(int limit) {
-        // Simple implementation - get all and limit
-        // In production, you'd add createdAt timestamp and order by it
-        return songRepository.findAll().stream()
+    // NEW: Search songs by query (title, artist, or album)
+    public List<SongDTO> searchSongs(String query) {
+        return songRepository.searchSongs(query).stream()
+            .map(this::convertToDTO)
+            .collect(Collectors.toList());
+    }
+    
+    // NEW: Get trending songs
+    public List<SongDTO> getTrendingSongs(int limit) {
+        return songRepository.findByOrderByPlayCountDesc().stream()
             .limit(limit)
             .map(this::convertToDTO)
-            .toList();
+            .collect(Collectors.toList());
     }
 }
